--- a/styles/main.css
+++ b/styles/main.css
@@ -1,23 +1,36 @@
-.game-board {
-    display: grid;
-    grid-template-rows: 300px 300px 300px;
-    grid-template-columns: 300px 300px 300px;
+@media (max-width: 900px) {
+    body {
+        display: block;
+        justify-content: center;
+    }
+    .box {
+        display: block;
+        align-items: center;
+        justify-content: center;
+    }
+    img{
+        width: 100%;
+    }
 }
 
-
-   body {
-       display: flex;
-       justify-content: center;
-   }
-.box {
-
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #AAA;
-}
-img{
-width: 300px;
-height: 300px;
+@media (min-width: 900px) {
+    .game-board {
+        display: grid;
+        grid-template-rows: 300px 300px 300px;
+        grid-template-columns: 300px 300px 300px;
+    }
+    body {
+        display: flex;
+        justify-content: center;
+    }
+    .box {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #AAA;
+    }
+    img{
+        width: 300px;
+        height: 300px;
+    }
 }
